2005-01-24 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Grealty simplify the JPEg decompression, no need to differenciate based on 
     the JPEG possible type (with/without fragment, with/without multiple frame). 
     Everything is done throught the JPEG IO Suspension mechanism in IJG

2005-01-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDicomDirElement.h, gdcmDict.h : rename AddNewXxx methods to AddXxx.
   * src/gdcmDict.h : rename GetDictEntry moethod to GetEntry, to be coherent 
     with other method names
   * gdcmPython/gdcm.i : bug fix. Add the typemaps for the TagName type
   * Test/TestDicomDirElement.cxx : add new test

2005-01-22 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Finish the CreateUniqueUID stuff. Seems to compiled/runs on every
     plateforms ITK support. Had some troubles with uint64_t on Win32, go to
     http://msdn.microsoft.com/library/default.asp?url=/library/en-us/vclang/html/_langref_data_type_ranges.asp
     for more info. Basically you can not used 'unsigned' __int8 in an ostream.
     So can't you use __int64 in ostream at all.

2005-01-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * bug fix for compilation on MSVC6
   * gdcmPython/gdcm.i : rename of classes missed

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmDicomDirElement.[h|cxx] : change the AddEntry method. Now, it gets a
     type and not a string. So, there remove problems on the format of the
     string.

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDicomDirObject.h : set the FillObject method in protected.
     Thus, DicomDirXXX are created with a flad that indicates if the created
     object is empty or not (when not empty, the DicomDirElement is used to
     fill the object)

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDicomDir.cxx : simplify the NewPatient method, like made in